WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
11534
REGRESSION: Readonly text fields don't scroll when selecting content
https://bugs.webkit.org/show_bug.cgi?id=11534
Summary
REGRESSION: Readonly text fields don't scroll when selecting content
Matt Lilek
Reported
2006-11-06 14:05:57 PST
If the contents of a readonly text field is longer than the text field, the text does not scroll to allow you to select more of the content. (Cmd + A and triple click both work fine to select all content.)
Attachments
patch
(27.60 KB, patch)
2007-02-17 00:02 PST
,
Adele Peterson
mitz: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Stephanie Lewis
Comment 1
2007-01-22 17:23:15 PST
InRadar <
rdar://problem/4946947
>
Adele Peterson
Comment 2
2007-02-05 23:08:42 PST
Right now we have code in RenderObject::shouldAutoscroll that only allows autoscroll for overflow:hidden if the node is editable. We should probably implement RenderTextControl::shouldAutoscroll.
Adele Peterson
Comment 3
2007-02-17 00:02:21 PST
Created
attachment 13208
[details]
patch
mitz
Comment 4
2007-02-17 00:36:41 PST
Comment on
attachment 13208
[details]
patch r=me
Adele Peterson
Comment 5
2007-02-17 00:40:06 PST
Committed revision 19678
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug