LayoutTests:

Reviewed by Mitz.

        Fix for http://bugs.webkit.org/show_bug.cgi?id=11534
        <rdar://problem/4946947> REGRESSION: Readonly text fields don't scroll when selecting content

        * fast/forms/input-readonly-autoscroll-expected.checksum: Added.
        * fast/forms/input-readonly-autoscroll-expected.png: Added.
        * fast/forms/input-readonly-autoscroll-expected.txt: Added.
        * fast/forms/input-readonly-autoscroll.html: Added.

WebCore:

        Reviewed by Mitz.

        Fix for http://bugs.webkit.org/show_bug.cgi?id=11534
        <rdar://problem/4946947> REGRESSION: Readonly text fields don't scroll when selecting content

        Test: fast/forms/input-readonly-autoscroll.html

        Implemented autoscroll methods for RenderTextControl, so this works on non-editable text controls.

        * rendering/RenderTextControl.cpp: (WebCore::RenderTextControl::autoscroll):
        * rendering/RenderTextControl.h: (WebCore::RenderTextControl::shouldAutoscroll):



Canonical link: https://commits.webkit.org/16542@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@19678 268f45cc-cd09-0410-ab3c-d52691b4dbfc