WebCore/rendering/RenderTextControl.h
@@ -71,6 +71,9 @@ public:
     void forwardEvent(Event*);
     void selectionChanged(bool userTriggered);
 
+    virtual bool shouldAutoscroll() const { return true; }
+    virtual void autoscroll();
+
     // Subclassed to forward to our inner div.
     virtual int scrollLeft() const;
     virtual int scrollTop() const;
